cabal-version:      2.4
name:               tinyid
version:            0.1.0.0
synopsis:           A secure URL-friendly string ID generator
homepage:           https://github.com/m4xine/tinyid
bug-reports:        https://github.com/m4xine/tinyid/issues
license:            MIT
license-file:       LICENSE
author:             m4xine
maintainer:         maxined@pm.me
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        Data.TinyID
    build-depends:    
        base        ^>=4.14.3.0,
        bytestring  ^>=0.11.3.1,
        entropy     ^>=0.4.1.10
    hs-source-dirs:   src
    default-language: Haskell2010
